--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL=postgresql://cuebanita_user:aTevhP6PYreCzSzMdiy7Oj2pHVTAkK2J@dpg-cq38pmss1f4s73fb74q0-a/cuebanita
+DB_URL="postgresql://cuebanita_user:aTevhP6PYreCzSzMdiy7Oj2pHVTAkK2J@dpg-cq38pmss1f4s73fb74q0-a.oregon-postgres.render.com/cuebanita"
